<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MetroBike</string>
    <string name="version">2.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_history">History</string>
    <string name="button_details">Details</string>
    <string name="button_search">Search</string>
    <string name="button_search_desc">Search Button</string>
    <string name="edittext_hint_to">To</string>
    <string name="edittext_hint_startfrom">Start from</string>
    <string name="image_desc">Image</string>
    
    <!-- General errors across the app -->
    <string name="error_invalid_request_params">Invalid request parameters.</string>
    <string name="error_unsupported_travel_mode_error">Requested travel mode not supported.</string>
    <string name="error_unsupported_charset">Internal error: default charset not supported.</string>
    <string name="error_parsing_error">Got a bad response from the server.</string>
    <string name="error_connection_error">Having trouble connecting to the server. Please try again later.</string>
    <string name="error_no_results_found">Found no results. Please check to be sure your addresses and travel options are correct.</string>
    <string name="error_over_query_limit">Over query limit. App has exceeded maximum number of daily directions request queries from Google.</string>
    
    <!-- Strings related to About -->
    <string name="title_activity_about">About</string>
    <!-- this empty string is to get ride of the huskysoft image warning -->
    <string name="huskysoft_description"></string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_detail_version">2.0</string>
    <string name="pref_title_locale">Locale/Language</string>
    <string name="pref_detail_locale">en_US</string>

    <!-- Map settings -->
    <string name="pref_header_map">Map</string>
    <string name="pref_map_type">Map Type</string>
    <string name="pref_traffic">Show Traffic</string>
    <string name="pref_currentLocation">Current Location</string>

    <!-- History settings -->
    <string name="pref_header_history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="view_history">View History</string>
    <string name="empty_history">History is empty</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="message_delete_all_history">Are you sure to delete all history entries?</string>
    
    <!-- History Activity -->
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="message_are_your_sure">Are you sure to delete</string>

    <!-- Details Activity -->
    <string name="button_go_to_search">Search</string>
    <string name="button_go_to_results">Routes</string>
    <string name="button_go_to_next">Next</string>
    <string name="button_go_to_previous">Previous</string>
    <string name="button_navigate">Navigate</string>

    <!-- Navigate Activity -->
    <string name="button_go_to_detail">Details</string>

    <!-- Search Activity -->
    <string name="radio_button_leave_now">Leave Now</string>
    <string name="radio_button_depart_at">Depart At:</string>
    <string name="radio_button_arrive_at">Arrive At:</string>
    <string name="dialogbox_date">Select a Date</string>
    <string name="dialogbox_time">Select a Time</string>
    <string name="button_history">History</string>
    <string name="button_find">Find Routes</string>
    <string name="button_reverse_desc">Reverse Button</string>
    <string name="button_clear_from_desc">Clear Button (From)</string>
    <string name="button_clear_to_desc">Clear Button (To)</string>
    <string name="textview_departure_time">Departure Time</string>
    <string name="textview_history">History</string>
    <string name="textview_travel_mode">Select a Travel Mode:</string>
    <string name="history_from">From:\t</string>
    <string name="history_to">To:\t</string>
    <string name="checkbox_bicycle_only">Bicycle Only</string>
    <string name="textview_advanced_options">Advanced Options</string>
    <string name="textview_advanced_options_note">(Leave blank if you do not care)</string>
    <string name="textview_choose_num_buses">Number of Buses:</string>
    <string name="textview_choose_distance">Total Biking Distance (in miles):</string>
    <string name="edittext_hint_min">Min</string>
    <string name="edittext_hint_max">Max</string>
    <string name="error_gps_not_available">GPS location is not available</string>
    <string name="error_gms_connection_fail">Connection Failed, please check your Google Play Services status</string>
    <string name="message_request_cancelled">Request has been cancelled</string>
    <string name="message_searching_for_routes">Searching for routes&#8230;</string>
    <string name="message_cancelling">Cancelling request&#8230; (This may take a moment)</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_searching">Searching</string>
    <string name="dialog_title_cancelling">Cancelling</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="edittext_curr_location">Current Location</string>

    <!-- Results Activity -->
    <string name="bike">Bike&#8212;</string>
    <string name="transit">Transit&#8212;</string>
    <string name="route_length">Route length: </string>
    <string name="meters_duration"> meters\nDuration: </string>
    <string name="start_here">Start Here!</string>
    <string name="end_here">End Here!</string>
    <string name="departure_at">Departure at: </string>
    <string name="route_button">Route</string>
    
    <!-- About Activity -->
    <string name="textview_dev_by">Developed By</string>
    <string name="textview_ui">UI</string>
    <string name="textview_backend">Backend</string>
    <string name="textview_algorithm">Algorithm</string>
    <string name="textview_developers">	    Jaylen VanOrden, Xinyun Chen, Corey Harmon,
	    Adrian Laurenzi, Qinyuan Wan, Shuo Wang, Sam Wilson
	</string>
    <string name="textview_jaylen">Jaylen VanOrden</string>
    <string name="textview_xinyun">Xinyun Chen</string>
    <string name="textview_corey">Corey Harmon</string>
    <string name="textview_adrian">Adrian Laurenzi</string>
    <string name="textview_qinyuan">Qinyuan Wan</string>
    <string name="textview_shuo">Shuo Wang</string>
    <string name="textview_sam">Sam Wilson</string>
    <string name="textview_title_term_and_conditions">Terms and Conditions</string>
    <string name="button_term_and_conditions">Terms and Conditions</string>
    <string name="term_and_conditions">MetroBike is a non-profit Android application developed by students in Department of Computer Science and Engineering at University of Washington, Seattle.
        \n\nMetroBike is only used for educational and research purposes. The result routes may not be the best routes. MetroBike will not be responsible for any loss or damage caused by using this application. 
        \n\nMetroBike used Google Maps as our map engine. All the terms and conditions are under Google Maps term and conditions.
        \n\nFor more information about the Google map terms and conditions, please use Google to search \"Google Maps terms and conditions\".
    </string>

    <!-- Main Activity -->
    <string name="button_search_main">Search</string>
    <string name="textView_hint">Click "Search" to Start Searching for Biking Routes</string>
    <string name="menu_settings">Settings</string>

    <!-- Action Bar/Menu Texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    
    <!-- Backend Uitility Class -->
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
</resources>