<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity" >

    <ImageView
        android:id="@+id/imageViewA"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editTextStartFrom"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/a" />

    <ImageView
        android:id="@+id/imageViewB"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editTextTo"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/b" />

    
    
    <EditText
        android:id="@+id/editTextStartFrom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageButtonReverse"
        android:layout_marginBottom="14dp"
        android:layout_toLeftOf="@+id/imageButtonReverse"
        android:layout_toRightOf="@+id/imageViewA"
        android:background="@drawable/blue_border"
        android:ems="10"
        android:hint="@string/edittext_hint_startfrom"
        android:singleLine="true"
        android:padding="10dp" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>
    
    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imageViewA"
        android:layout_toLeftOf="@+id/imageButtonReverse"
        android:layout_toRightOf="@+id/imageViewB"
        android:background="@drawable/blue_border"
        android:ems="10"
        android:hint="@string/edittext_hint_to"
        android:singleLine="true"
        android:padding="10dp" />



    <ImageButton
        android:id="@+id/imageButtonReverse"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/button_reverse_desc"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/reverse" />

    <RadioGroup
        android:id="@+id/radioGroupStartingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonLeaveNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button_leave_now" />

        <RadioButton
            android:id="@+id/radioButtonDepartAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="@string/radio_button_depart_at" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupStartingTime"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:inputType="date"
            android:gravity="center" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:enabled="false"
            android:inputType="time"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" >
        
        <Button
	        android:id="@+id/buttonHistory"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_history" />
        
        <Button
	        android:id="@+id/buttonFind"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_find" />
    </LinearLayout>

</RelativeLayout>