<!-- Author: Sam Wilson, Shuo Wang -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_term_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5CCCCC"
        android:gravity="center"
        android:text="@string/textview_title_term_and_conditions"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/huskySoftLogo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:contentDescription="@string/huskysoft_description"
        android:src="@drawable/about_logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/term_and_conditions"
        android:textSize="18sp" />
</LinearLayout>
