<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="280dip"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal"
        android:layout_marginBottom="15dip"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_go_to_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="goToSearchPage"
            android:text="@string/button_go_to_search"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_go_to_result"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".34"
            android:onClick="goToResults"
            android:text="@string/button_go_to_results"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_detail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="goToDetail"
            android:text="@string/button_go_to_detail"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>