<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="240dip"
        android:layout_height="50dip"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="15dip"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_go_to_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="goToSearchPage"
            android:text="@string/button_go_to_search"
            android:padding="0dp"
            android:textSize="13sp" />

        <Button
            android:id="@+id/button_detail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".34"
            android:onClick="goToDetail"
            android:text="@string/button_go_to_detail"
            android:padding="0dp"
            android:textSize="13sp" />

        <Button
            android:id="@+id/button_navigate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="goToNavigate"
            android:text="@string/button_navigate"
            android:padding="0dp"
            android:textSize="13sp" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollViewRouteSelection"
        android:layout_width="80dp"
        android:layout_height="216dp"
        android:layout_gravity="left|center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayoutForRouteSelection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</FrameLayout>