<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="410dip"
        android:layout_marginLeft="5dp"
        android:background="@drawable/blue_border" />
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  		android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
       
        <LinearLayout
        	android:orientation="vertical"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
        		android:id="@+id/directionsStart"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="From: "
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />
             
            <TextView
        		android:id="@+id/directions"
        		android:layout_marginLeft="30dp"
           		android:layout_marginRight="30dp"
        		android:layout_width="fill_parent"
        		android:textSize="18sp"
        		android:layout_height="wrap_content" />
       		
              
            <TextView
        		android:id="@+id/directionsDest"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content" 
        		android:text="To: "
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp" /> 
   		 </LinearLayout>
    </ScrollView>  
      
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_go_to_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="goToSearchPage"
            android:text="@string/button_go_to_search"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_go_to_result"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".34"
            android:onClick="goToResults"
            android:text="@string/button_go_to_results"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_navigate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:onClick="goToNavigate"
            android:text="@string/button_navigate"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>